[package]
name = "ibc-tokens-path-tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
bech32-addr-converter = "1.0.1"
clap = { version = "4.5.8", features = ["derive"] }
config = "0.14.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
